--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,15 @@ body {
   box-shadow: 3px 4px #e04b52
 }
 
+.container {
+  padding: 1rem;
+  width: stretch;
+  height: auto;
+  display: none;
+  background: #515DA2;
+  opacity: .8;
+}
+
 .card-hog-pic {
   justify-self: center;
   height: 12rem;
