figuring out API and uncaught promise

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: sans-serif;
 }
 
-.card {
+/* .card {
   text-align: center;
   border: grey solid 1px;
   padding: 1rem;
@@ -46,4 +46,4 @@ button:hover {
   background-color: whitesmoke;
   border: #e04b52 solid 1px;
   color: #e04b52;
-}
+} */
